@@ -1,3 +1,5 @@
+- Fixed potential vulnerabilities on appointments list.
+
 2017-10-16 - 2.2.2.2
 -------------------------------
 - Fixed security issue (vulnerability) with appointments actions. Props for Rolf Allard van Hagen.
